# ricoComputer

./: .gitignore  .gitmodules  Cargo.toml  README.md  run.sh  setup.sh
rc_asm/: Cargo.toml
rc_asm/src/: lib.rs  utils.rs
rc_asm/src/instructions/: arithmetic.rs  branch.rs  io.rs  mod.rs  mov.rs  stop.rs  subroutine.rs
rc_cli/: Cargo.toml
rc_cli/src/: main.rs  opt.rs
rc_cli/src/commands/: asm.rs  mod.rs  run.rs
rc_common/: Cargo.toml
rc_common/src/: error.rs  lib.rs
rc_common/src/types/: declaration.rs  instruction.rs  mod.rs  reference.rs  syntaxtree.rs  word.rs
rc_parser/: Cargo.toml
rc_parser/src/: lib.rs
rc_parser/src/parsers/: common.rs  declaration.rs  instruction.rs  mod.rs  reference.rs
rc_vm/: Cargo.toml
rc_vm/src/: lib.rs  utils.rs
rc_vm/src/instructions/: in.rs  mod.rs  out.rs  stop.rs
src/: asm.rs  lib.rs  main.rs  opt.rs
src/asm/: arithmetic.rs  branch.rs  common.rs  io.rs  mod.rs  mov.rs  stop.rs  subroutine.rs
src/commands/: compile.rs  mod.rs  run.rs
src/parsers/: common.rs  declaration.rs  error.rs  instruction.rs  mod.rs  parser.rs  primitives.rs  symbol.rs
src/types/: declaration.rs  error.rs  instruction.rs  mod.rs  syntax.rs  vm.rs  word.rs
tests/: Cargo.toml  assemble_examples.rs  common.rs  declarations.rs  parse_examples.rs
tests/src/: assemble_examples.rs  parse_examples.rs
