[package]
name = "ricocomputer"
version = "0.1.0"
edition = "2021"

[dependencies]
nom = "7.1.3"
structopt = { version = "0.3.26", features = ["color"] }
num-traits = "0.2.19"
strum = "0.26.3"
strum_macros = "0.26.4"
nom-supreme = "0.8.0"
thiserror = "1.0.63"
miette = { version = "7.2.0", features = ["fancy"] }

[dev-dependencies]
walkdir = "2.5.0"